Fixed loader's z-index issue 🐞

--- a/assets/scss/bootstrap.scss
+++ b/assets/scss/bootstrap.scss
@@ -47,7 +47,7 @@
       width: 100%;
       height: 100%;
       background: rgba(255,255,255,0.6);
-      z-index: 9;
+      z-index: 99;
       display: flex;
       border-radius: $card-border-radius;
       .loading{
